Fixed white space appearing on rightfor mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .nav-toggle {
   display: none;
   background: transparent;
